# boar

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  main.rs
.github/workflows/: ci.yml
scripts/: test.sh  virt_common.sh  virt_config_tc.sh  virt_run_cc_client.sh  virt_run_test_proxy.sh  virt_tc_htb.sh  virt_tc_netem.sh
src/: args.rs  endpoint.rs  error.rs  main.rs  network.rs  report.rs  stats.rs
src/stats/: delivery_rate.rs  download_duration.rs  mod.rs  startup_exit.rs
